--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -21,4 +21,11 @@
             android:icon="@drawable/ic_settings_black_24dp"
             android:title="@string/menu_settings" />
     </group>
+
+    <group android:id="@+id/auth_group">
+        <item
+            android:id="@+id/nav_login"
+            android:icon="@android:drawable/ic_lock_idle_lock"
+            android:title="Login" />
+    </group>
 </menu>
